# StumpfWORKS-Nexus

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/datasphere/: commands.rs  crypto.rs  mod.rs  models.rs  storage.rs
src-tauri/src/mcp/: handlers.rs  http.rs  mod.rs  permissions.rs  server.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/session/: commands.rs  mod.rs
src-tauri/src/sftp/: client.rs  commands.rs  manager.rs  mod.rs
src-tauri/src/ssh/: client.rs  commands.rs  mod.rs
src-tauri/src/terminal/: commands.rs  manager.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/command-palette/: CommandPalette.tsx
src/components/layout/: MainLayout.tsx  SnippetSidebar.tsx  TabBar.tsx  TitleBar.tsx
src/components/pages/: Dashboard.tsx
src/components/settings/: Settings.tsx
src/components/sftp/: SftpExplorer.tsx
src/components/sidebar/: Sidebar.tsx
src/components/snippets/: SnippetManager.tsx
src/components/terminal/: TerminalView.tsx
src/components/ui/: HostEditor.tsx  LatencyGraph.tsx  PasswordDialog.tsx  Toast.tsx  index.ts
src/components/vault/: VaultManager.tsx  VaultView.tsx
src/hooks/: useTauri.ts
src/lib/: utils.ts
src/store/: commandPaletteStore.ts  hostStore.ts  sessionStore.ts  settingsStore.ts  themeStore.ts
src/styles/: globals.css
src/types/: index.ts
