[package]
name = "stumpfworks-nexus"
version = "0.1.0"
description = "Modern SSH, SFTP & DevOps Tool"
authors = ["Stumpf-works"]
edition = "2021"

[lib]
name = "stumpfworks_nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stumpfworks-nexus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
parking_lot = "0.12"
once_cell = "1"

# SSH/SFTP (will be implemented later)
# russh = "0.43"
# russh-keys = "0.43"
# russh-sftp = "2"

# Encryption for DataSphere
# sodiumoxide = "0.2"
# argon2 = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
