[package]
name = "stumpfworks-nexus"
version = "0.1.0"
description = "Modern SSH, SFTP & DevOps Tool"
authors = ["Stumpf-works"]
edition = "2021"

[lib]
name = "stumpfworks_nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stumpfworks-nexus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
parking_lot = "0.12"
once_cell = "1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# SSH/SFTP
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.0.0-beta.5"

# Encryption for DataSphere
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# MCP HTTP Server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
